Fixing form layout issue

--- a/src/app/components/time-input/time-input.component.css
+++ b/src/app/components/time-input/time-input.component.css
@@ -5,7 +5,7 @@
     min-height: 90vh;
 }
 
-.time-input-content {
+form {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
